objects/tffa__DecisionStrategyConfiguration__c.object
<CustomObject>
    <description>Configuration for performing Champion/Challenger testing on decision tables (or matrices) for a specific use case (purpose).  Champion/Challenger testing is the process of comparing two or more strategies or processes to determine which one performs best. e.g. testing efficacy of different Questionnaires used for Financial need capture. A configuration can have 1 Champion and many Challenger strategies. Depending on the weights of the strategies, a suitable one is
        chosen at runtime.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the configuration.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of Champion/Challenger testing independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the Champion/Challenger testing expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__EntityKey__c</fullName>
        <description>Combination of entityType and entityPurpose. e.g. QuestionnaireMatrix_FINANCIAL_NEED, ApplicationDecisionMatrix_KYC</description>
        <formula>TEXT(tffa__EntityType__c) &amp; &quot;_&quot; &amp; TEXT(tffa__EntityPurpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EntityPurpose__c</fullName>
        <description>Identifies the use case (for chosen entity type) requiring Champion/Challenger testing.</description>
        <label>Entity purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DecisionStrategyEntityPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <description>Identifies the entity type requiring the Champion/Challenger testing.</description>
        <label>Entity type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DecisionStrategyEntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the Champion/Challenger testing is active. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Decision Strategy Configuration</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityType__c</columns>
        <columns>tffa__EntityPurpose__c</columns>
        <columns>tffa__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Strategy Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__EntityPurpose</fullName>
        <active>true</active>
        <description>Cannot edit EntityPurpose</description>
        <errorConditionFormula>ISCHANGED(tffa__EntityPurpose__c)</errorConditionFormula>
        <errorDisplayField>tffa__EntityPurpose__c</errorDisplayField>
        <errorMessage>Cannot edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__EntityType</fullName>
        <active>true</active>
        <description>Cannot edit EntityType</description>
        <errorConditionFormula>ISCHANGED(tffa__EntityType__c)</errorConditionFormula>
        <errorDisplayField>tffa__EntityType__c</errorDisplayField>
        <errorMessage>Cannot edit this field</errorMessage>
    </validationRules>
</CustomObject>